“更改页面布局”

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="Free Bootstrap Themes by Html5xCss3 dot com - Free Responsive Html5 Templates">
 	<meta name="author" content="#">
-	<title>IO : Blog</title>
+	<title>iozhaq</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -67,7 +67,9 @@
 						<span id="t_s">00秒</span>
 					</h1>
 				</DIV>
-				<a href="http://www.cnblogs.com/iozhaq/#" class="btn btn-primary btn-header1">IO</a>
+				
+				<a href="https://iozhaq.github.io/cloudeth/index.html" class="btn btn-primary btn-header1">云以太在线钱包</a>
+				<a href="http://www.cnblogs.com/iozhaq/#" class="btn btn-primary btn-header1">我的博客园</a>
 			</div>
 		</div>
 		<!-- /header-text -->
@@ -76,47 +78,6 @@
 	<!-- /Section: intro -->
 	<!-- /////////////////////////////////////////Content -->
 	<div id="page-content">
-
-		<!-- ////////////Content Box 02 -->
-		<section class="box-content box-2 box-style-0" id="box-slide" data-anchor="slide">
-			<div class="flex-box no-gutter">
-				<div class="col-sm-6">
-					<div id="owl-slide" class="owl-carousel">
-						<div class="item">
-							<div class="box-image" style="background-image: url('images/2.jpg');"></div>
-						</div>
-						<div class="item">
-							<div class="box-image" style="background-image: url('images/3.jpg');"></div>
-						</div>
-						<div class="item">
-							<div class="box-image" style="background-image: url('images/4.jpg');"></div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6">
-					<div class="box-text light-style">
-						<div class="box-text-inner pd-exlarge-lg pd-medium-md pd-small-xs">
-							<div class="heading">
-								<h2>
-									<span>Life</span>
-									<span>Is</span>
-									<span>a</span>
-									<span> Race</span>
-								</h2>
-							</div>
-							<div class="owl-controls m-top120">
-								<div class="btn next next-b_2-slide">
-									<i class="fa fa-arrow-left"></i>
-								</div>
-								<div class="btn prev next-b_2-slide">
-									<i class="fa fa-arrow-right"></i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
 
 		<!-- ////////////Content Box 03 -->
 		<section class="box-content box-3" id="box-gallery" data-anchor="gallery">
@@ -130,7 +91,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/10.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/10.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -149,7 +111,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/11.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/11.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -168,7 +131,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/12.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/12.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -187,7 +151,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/13.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/13.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -206,7 +171,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/14.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/14.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -225,7 +191,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/15.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/15.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -244,7 +211,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/16.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/16.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -263,7 +231,8 @@
 									<div class="project-social">
 										<ul class="list-inline">
 											<li>
-												<a href="images/17.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward.">
+												<a href="images/17.jpg" data-lightbox="example-set"
+													data-title="Click the right half of the image to move forward.">
 													<i class="fa fa-search"></i>
 												</a>
 											</li>
@@ -282,21 +251,13 @@
 			<div class="flex-box no-gutter">
 
 				<div class="col-md-4">
-					<div class="box-image" style="background-image: url('images/business.png');background-position: 0 0;"></div>
+					<div class="box-image"
+						style="background-image: url('images/business.png');background-position: 0 0;"></div>
 				</div>
 				<div class="col-md-4">
 					<div class="box-text dark-style">
 
 					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- ////////////Content Box 05 -->
-		<section class="box-content box-5" id="box-map" data-anchor="map">
-			<div class="container-fluid">
-				<div class="row">
-					<div id="map" style="height: 600px;"></div>
 				</div>
 			</div>
 		</section>
@@ -307,19 +268,11 @@
 					<b>Featured</b>
 					<div></div>
 				</li>
-				<li data-nav="slide">
-					<b>Slide</b>
-					<div></div>
-				</li>
+
 				<li data-nav="gallery">
 					<b>Gallery</b>
 					<div></div>
 				</li>
-				<li data-nav="leader">
-					<b>Map</b>
-					<div></div>
-				</li>
-
 			</ul>
 		</div>
 
